[package]
name = "create2"
version = "0.1.0"
authors = ["Michael Mogenson <mmogenson@iRobot.com>"]
edition = "2018"

[dependencies]
bluster = "0.1.2"
crossbeam = "0.6.0"
futures = "0.1.25"
keycode = "0.1.1"
nix = "0.13.0"
systemstat = "0.1.3"
tokio = "0.1.14"
udev = "0.2.0"
uuid = "0.7.1"
futures-timer = "0.1"
